# tesi-informatica-2025

./: CMakeLists.txt  README.md  partitions.csv
main/: CMakeLists.txt  idf_component.yml  main.c
main/connection/: internet.c  internet.h  lte.c  lte.h  wifi.c  wifi.h
main/data/: data_manager.c  data_manager.h  dto-builder.c  dto-builder.h  dto_builder.c  dto_builder.h
main/io/: converters.c  converters.h  multimeter.c  multimeter.h  target_registers.c  target_registers.h
main/system/: config.h  logging.h  memory.c  memory.h  system.c  system.h
